--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "inft-2202-ice",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "Hellooo!",
+  "description": "My webpack project",
   "main": "index.js",
-  "module": "type",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon src/server/app.js",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve",
+    "dev": "concurrently \"npm run watch\" \"npm run start\""
   },
   "repository": {
     "type": "git",
@@ -16,5 +23,36 @@
   "bugs": {
     "url": "https://github.com/AlyssaBhag/inft-2202-ice/issues"
   },
-  "homepage": "https://github.com/AlyssaBhag/inft-2202-ice#readme"
+  "homepage": "https://github.com/AlyssaBhag/inft-2202-ice#readme",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "bootstrap": "^5.3.3",
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.12.1",
+    "navigo": "^8.11.1",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.26.9",
+    "@webpack-cli/generators": "^3.0.7",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "http-server": "^14.1.1",
+    "mini-css-extract-plugin": "^2.9.2",
+    "nodemon": "^3.1.9",
+    "prettier": "3.4.2",
+    "sass": "^1.86.0",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-merge": "^6.0.1",
+    "workbox-webpack-plugin": "^7.3.0"
+  }
 }
