This isnt complete at all.
There are so many things missing but im to tired to deal with it.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "bootstrap": "^5.3.3",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "mongoose": "^8.12.1",
@@ -41,6 +42,8 @@
     "@webpack-cli/generators": "^3.0.7",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "ejs-compiled-loader": "^3.1.0",
+    "ejs-loader": "^0.5.0",
     "html-webpack-plugin": "^5.6.3",
     "http-server": "^14.1.1",
     "mini-css-extract-plugin": "^2.9.2",
