--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve",
-    "dev": "concurrently \"npm run watch\" \"npm run start\""
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -44,7 +43,8 @@
     "css-loader": "^7.1.2",
     "ejs-compiled-loader": "^3.1.0",
     "ejs-loader": "^0.5.0",
-    "html-webpack-plugin": "^5.6.3",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^4.5.2",
     "http-server": "^14.1.1",
     "mini-css-extract-plugin": "^2.9.2",
     "nodemon": "^3.1.9",
