--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "express-validator": "^7.2.1",
     "mongoose": "^8.12.1",
     "navigo": "^8.11.1",
+    "uglify-js": "^3.19.3",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@webpack-cli/generators": "^3.0.7",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
@@ -49,7 +51,7 @@
     "mini-css-extract-plugin": "^2.9.2",
     "nodemon": "^3.1.9",
     "prettier": "3.4.2",
-    "sass": "^1.86.0",
+    "sass": "^1.86.1",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
     "webpack": "^5.98.0",
